[project]
name = "intuno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.27.0",
    "isort>=6.0.1",
    "openai>=1.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "qdrant-client>=1.7.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.12.3",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = []
