[project]
name = "intuno"
version = "0.1.0"
description = "Open platform for building AI agent networks — registry, semantic discovery, broker, and economy"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "Intuno Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/IntunoAI/intuno"
Repository = "https://github.com/IntunoAI/intuno"
Documentation = "https://github.com/IntunoAI/intuno/tree/main/docs"
"Bug Tracker" = "https://github.com/IntunoAI/intuno/issues"
dependencies = [
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.27.0",
    "isort>=6.0.1",
    "openai>=1.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "qdrant-client>=1.7.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.12.3",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
    "mcp>=1.20",
    "fastmcp>=3.1.0",
    # From agent-os
    "pyyaml>=6.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
